# brandable-content-platform

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
django/: Dockerfile  conftest.py
django/apps/audit/: models.py  serializers.py  services.py  urls.py  views.py
django/apps/audit/migrations/: 0001_initial.py  0002_audit_log_immutable_trigger.py
django/apps/audit/tests/: test_audit.py
django/apps/commerce/: apps.py  handlers.py  models.py  serializers.py  services.py  urls.py  views.py
django/apps/commerce/migrations/: 0001_initial.py  0002_shop_catalog.py  0003_cart_shipping.py  0004_seller_application.py  0005_shipment_state_machine.py  0006_refunds_blockchain.py
django/apps/commerce/tests/: test_cart_shipping.py  test_commerce.py  test_refunds_qr_public.py  test_seller_fulfillment.py  test_seller_onboarding.py  test_shop_catalog.py
django/apps/content/drama/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
django/apps/content/gift/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
django/apps/content/live/: apps.py  models.py  runtime.py  serializers.py  services.py  urls.py  views.py
django/apps/economy/: apps.py  handlers.py  models.py  serializers.py  services.py  urls.py  views.py
django/apps/events/: dispatcher.py  models.py  registry.py  serializers.py  services.py  types.py  urls.py  views.py
django/apps/identity/: apps.py  handlers.py  models.py  serializers.py  services.py  totp.py  urls.py  views.py
django/apps/membership/: apps.py  handlers.py  models.py  serializers.py  services.py  urls.py  views.py
django/apps/payments/: models.py  serializers.py  services.py  urls.py  views.py
django/apps/platform_config/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
django/config/: urls.py
django/config/keys/: README.md
django/config/settings/: base.py  local.py  production.py  staging.py  test.py
django/libs/: db.py
django/libs/errors/: __init__.py  base_model.py  exceptions.py  handlers.py
django/libs/grpc_client/: __init__.py
django/libs/idempotency/: __init__.py
django/libs/jwt_auth/: __init__.py  authentication.py  permissions.py  signer.py  urls.py  views.py
django/libs/logging/: filters.py  formatters.py  middleware.py
django/libs/migration/: __init__.py  command.py  legacy.py  report.py
django/libs/pagination/: cursor.py
django/libs/telemetry/: __init__.py  metrics.py
django/management/commands/: seed.py
docs/: README.md  getting-started.md
docs/adr/: 0011-architecture-first-boundary-adjustment.md  0012-on-prem-no-cloud-no-container.md  README.md
docs/architecture/: modules.md
docs/contracts/: README.md  chat.md  commerce.md  live-runtime.md  membership.md  notification.md  payments.md
docs/migration/: feature-inventory.md  rehearsal-runbook.md
docs/ops/: deployment.md  testing-strategy.md
ops/: env.production.example
ops/ansible/: deploy.yml
ops/grafana/: datasources.yaml
ops/migration/reports/: .gitkeep
ops/nginx/: brandable.conf
ops/systemd/: brandable-dispatcher.service  brandable-django.service  brandable-live-runtime.service  brandable-notification.service
proto/chat/v1/: chat.proto
proto/common/v1/: common.proto
proto/live/v1/: live_runtime.proto
proto/notification/v1/: notification.proto
services/chat/: Dockerfile  interceptors.py  logging_config.py  main.py  requirements.txt  schema.sql  servicer.py  telemetry.py  test_ping.py  test_servicer.py
services/live/: Dockerfile  ant_media.py  interceptors.py  logging_config.py  main.py  presence.py  servicer.py  telemetry.py  test_servicer.py
services/notification/: Dockerfile  interceptors.py  logging_config.py  main.py  servicer.py  telemetry.py  test_ping.py  test_send.py
(+71 files in other folders)
